--- a/app/index.html
+++ b/app/index.html
@@ -784,7 +784,7 @@
                 </div>
             </div>
             <div class="footer__main">
-                <nav class="footer__menu menu ">
+                <nav class="menu footer__menu">
                     <ul class="menu__list">
                         <li><a href="#">Услуги</a></li>
                         <li><a href="#">о нас</a></li>
