--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
                     <div class="communication call-block__communication">
                         <a class="communication__link communication__link--number" href="tel:88004441046">8 800 444 10 46</a>
                     </div>
-                    <a class="button button--blue call-block__call" href="#feedback-modal" data-fancybox="#feedback-modal" data-src="#feedback-modal">
+                    <a class="button button--blue call-block__call" href="#feedback-modal" data-fancybox data-src="">
                         Заказать звонок
                     </a>
                 </div>
@@ -778,13 +778,13 @@
                         <a class="communication__link communication__link--number" href="tel:88004441046">8 800 444 10 46</a>
                         <a class="communication__link communication__link--mail" href="mailto:mail@mail.ru">mail@mail.ru</a>
                     </div>
-                    <button class="button button--blue call-block__call">
+                    <a class="button button--blue call-block__call" href="#feedback-modal" data-fancybox data-src="">
                         Заказать звонок
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="footer__main">
-                <nav class="menu footer__menu">
+                <nav class="footer__menu menu ">
                     <ul class="menu__list">
                         <li><a href="#">Услуги</a></li>
                         <li><a href="#">о нас</a></li>
