--- a/app/listing.html
+++ b/app/listing.html
@@ -85,6 +85,7 @@
                         <li><a target="_blank" href="services.html">Услуги</a></li>
                         <li><a target="_blank" href="vacancies.html">Вакансии</a></li>
                         <li><a target="_blank" href="content-page.html">Контентная страница</a></li> 
+                        <li><a target="_blank" href="about.html">О нас</a></li> 
                     </ul>
                 </div>
             </div>
