--- a/app/about.html
+++ b/app/about.html
@@ -143,7 +143,7 @@
                         <h1 class="content-page__title section-title section-title--center">
                             О нас
                         </h1>
-                        <div class="content-page__slider">
+                        <div class="content-page__slider slider">
                             <div class="services__slider-block">
                                 <a class="services__slider-img-block" href="#">
                                     <img class="services__slider-img" src="images/services/1.jpg" alt="">
@@ -260,21 +260,21 @@
                         <p class="why-we__subtitle">
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et <br> magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, 
                         </p>
-                        <div class="why-we__row">
+                        <div class="why-we__row content_block">
                             <div class="why-we__container">
-                                <div class="why-we__item">
+                                <a class="why-we__item" href="#">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/1.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/1.svg" alt="">
                                     </div>
-                                    <a class="why-we__link" href="#">
+                                    <p class="why-we__link">
                                         Лицензия на эксплуатацию источников ионизирующего излучения
-                                    </a>
-                                </div>
+                                    </p>
+                                </a>
                             </div>
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/2.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/2.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         На основании осмотра готовим <b>рекомендации  с указанием недостатков укрепленности</b> и пропускного режима подлежащих охране объектов
@@ -285,7 +285,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/3.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/3.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         Собственная инспекторская служба. <b>Контроль за несением службы охранниками</b>, в том числе и внезапные ночные проверки
@@ -296,7 +296,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/4.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/4.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         <b>Имеем свои передвижные посты-вагончики</b>, позволяющие организовывать в полевых и неподготовленных условиях
@@ -306,7 +306,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/5.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/5.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         Для повышения качечства услуг внедрено <b>положение по поощрению охранников</b>
@@ -317,7 +317,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/6.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/6.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         <b>Автопарк более 20 машин.</b> Оборудованы гланасс (в том числе повышенной проходимости)
@@ -327,7 +327,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/7.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/7.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         Для производственных, сельхоз предприятий и строительных площадок <b>проводим дополнительные досмотровые мероприятия</b> с дополнительным привлечением охранниокв без увеличения стоимости услуг
@@ -338,7 +338,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/8.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/8.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         <b>Производим проверку охранников\сотрудников заказчика с помощью алкотестеров.</b> Результат фото-фиксируется для предотвращения вступления в сговор производим ротацию сотрудников между объектами \ территориями
@@ -349,7 +349,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/9.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/9.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         Перед взятием объекта под охрану <b>производим осмотр в дневное и ночное время суток</b> на предмет достаточности освещенности и укрепленности объекта
@@ -360,7 +360,7 @@
                             <div class="why-we__container">
                                 <div class="why-we__item">
                                     <div class="why-we__img-block">
-                                        <img class="why-we__img" src="images/why-we/10.png" alt="">
+                                        <img class="why-we__img" src="images/why-we/10.svg" alt="">
                                     </div>
                                     <p class="why-we__text">
                                         Производим периодическую <b>проверку охранников с использованием полиграфа</b>
@@ -381,7 +381,7 @@
                             <h4 class="about-licenses__title">
                                 <span class="about-licenses__title-span">Лицензии</span>
                             </h4>
-                            <div class="about-licenses__slider">
+                            <div class="about-licenses__slider slider">
                                 <a class="about-licenses__slider-item" data-fancybox="" href="images/licenses/1.jpg">
                                     <img class="about-licenses__img" src="images/licenses/1.jpg" alt="">
                                 </a>
@@ -416,7 +416,7 @@
                             <h4 class="about-reviews__title">
                                 <span class="about-reviews__title-span">Отзывы</span>
                             </h4>
-                            <div class="about-reviews__slider">
+                            <div class="about-reviews__slider slider">
                                 <a class="about-reviews__slider-item" data-fancybox href="images/reviews/1.jpg">
                                     <img class="about-reviews__img" src="images/reviews/1.jpg" alt="">
                                 </a>
@@ -598,7 +598,7 @@
             <div class="slider-down">
                 <div class="container">
                     <div class="slider-down__inner">
-                        <div class="content-page__slider-down-block">
+                        <div class="content-page__slider-down-block slider">
                             <a class="content-page__slider-down-img-block content-page__slider-down-img-block" href="#">
                                 <img class="content-page__slider-down-img" src="images/services/services-item-1.jpg" alt="">
                             </a>
@@ -633,7 +633,7 @@
                         <h1 class="content-page__title section-title section-title--center">
                             мы поддерживаем спорт
                         </h1>
-                        <div class="content-page__slider">
+                        <div class="content-page__slider slider">
                             <div class="services__slider-block">
                                 <a class="services__slider-img-block" href="#">
                                     <img class="services__slider-img" src="images/sport/1.jpg" alt="">
@@ -890,9 +890,9 @@
                     <div class="footer__bottom-item-text">
                         (с) ЧОП “Содействие”, 2020
                     </div>
-                    <div class="footer__bottom-item-text">
+                    <a class="footer__bottom-item-link" href="#">
                         Разработано в Showbiz
-                    </div>
+                    </a>
                 </div>
             </div>
         </footer>
