--- a/app/contacts.html
+++ b/app/contacts.html
@@ -172,22 +172,22 @@
                                             <div class="contact-item__address">
                                                 Адрес: г. Москва, ул. Свободы, 14
                                             </div>
-                                            <div class="contact-item__link-map">
+                                            <a class="contact-item__link-map" href="#">
                                                 Карта проезда
-                                            </div>
+                                            </a>
     
                                             <div class="contact-item__social">
                                                 <a class="contact-item__social-item" href="#">
-                                                    <img class="ontact-item__social-item-img" src="images/social/facebook.png" alt="">
+                                                    <img class="contact-item__social-item-img" src="images/social/facebook.png" alt="">
                                                 </a>
                                                 <a class="contact-item__social-item" href="#">
-                                                    <img class="ontact-item__social-item-img" src="images/social/vk.png" alt="">
+                                                    <img class="contact-item__social-item-img" src="images/social/vk.png" alt="">
                                                 </a>
                                                 <a class="contact-item__social-item" href="#">
-                                                    <img class="ontact-item__social-item-img" src="images/social/youtube.png" alt="">
+                                                    <img class="contact-item__social-item-img" src="images/social/youtube.png" alt="">
                                                 </a>
                                                 <a class="contact-item__social-item" href="#">
-                                                    <img class="ontact-item__social-item-img" src="images/social/instagram.png" alt="">
+                                                    <img class="contact-item__social-item-img" src="images/social/instagram.png" alt="">
                                                 </a>
                                             </div>
                                         </div>
@@ -196,8 +196,8 @@
                                         </div>
                                     </div>
                                    
-                                    <div class="contact-item__map-block">
-                                        <iframe class="contact-item__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A36e5d65cb229c93d43667e4a7c20e38f13f40cb3939f040cf54961724614a7eb&amp;source=constructor" width="100%" height="505" frameborder="0"></iframe>
+                                    <div id="map-wrap" class="contact-item__map-block">
+                                        <iframe class="contact-item__map" style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3A36e5d65cb229c93d43667e4a7c20e38f13f40cb3939f040cf54961724614a7eb&amp;source=constructor" width="100%" height="505" frameborder="0"></iframe>
                                     </div>
                                 </div>
                             </div>
