--- a/app/content-page.html
+++ b/app/content-page.html
@@ -147,7 +147,7 @@
                         <h1 class="content-page__title section-title section-title--center">
                             контентная страница
                         </h1>
-                        <div class="content-page__slider">
+                        <div class="content-page__slider slider">
                             <div class="services__slider-block">
                                 <a class="services__slider-img-block" href="#">
                                     <img class="services__slider-img" src="images/services/1.jpg" alt="">
@@ -280,7 +280,7 @@
                            
                         </div>
                         <div class="content-page__slider-down">
-                            <div class="content-page__slider-down-block">
+                            <div class="content-page__slider-down-block slider">
                                 <a class="content-page__slider-down-img-block content-page__slider-down-img-block" href="#">
                                     <img class="content-page__slider-down-img" src="images/services/services-item-1.jpg" alt="">
                                 </a>
@@ -529,9 +529,9 @@
                     <div class="footer__bottom-item-text">
                         (с) ЧОП “Содействие”, 2020
                     </div>
-                    <div class="footer__bottom-item-text">
+                    <a class="footer__bottom-item-link" href="#">
                         Разработано в Showbiz
-                    </div>
+                    </a>
                 </div>
             </div>
         </footer>
