--- a/app/services.html
+++ b/app/services.html
@@ -160,7 +160,7 @@
                                 content 1
                             </div>
                             <div id="services__tab-2" class="services__tab-content tab-content active">
-                                <div class="services__slider">
+                                <div class="services__slider slider">
                                     <div class="services__slider-block">
                                         <a class="services__slider-img-block" href="#">
                                             <img class="services__slider-img" src="images/services/1.jpg" alt="">
@@ -468,9 +468,9 @@
                     <div class="footer__bottom-item-text">
                         (с) ЧОП “Содействие”, 2020
                     </div>
-                    <div class="footer__bottom-item-text">
+                    <a class="footer__bottom-item-link" href="#">
                         Разработано в Showbiz
-                    </div>
+                    </a>
                 </div>
             </div>
         </footer>
