--- a/app/about.html
+++ b/app/about.html
@@ -794,15 +794,21 @@
                 </div>
                 <div class="call-block footer__call-block">
                     <div class="social">
-                        <a href="" class="social__link">
-                            <img class="social__link-img" src="images/social/telegram.png" alt="">
-                        </a>
-                        <a href="" class="social__link">
-                            <img class="social__link-img" src="images/social/viber.png" alt="">
-                        </a>
-                        <a href="" class="social__link">
-                            <img class="social__link-img" src="images/social/whatsapp.png" alt="">
-                        </a>
+                        <div class="social__container">
+                            <a href="" class="social__link">
+                                <img class="social__link-img" src="images/social/telegram.png" alt="">
+                            </a>
+                        </div>
+                        <div class="social__container">
+                            <a href="" class="social__link">
+                                <img class="social__link-img" src="images/social/viber.png" alt="">
+                            </a>
+                        </div>
+                        <div class="social__container">
+                            <a href="" class="social__link">
+                                <img class="social__link-img" src="images/social/whatsapp.png" alt="">
+                            </a>  
+                        </div>  
                     </div>
                     <div class="communication call-block__communication">
                         <a class="communication__link communication__link--number" href="tel:88004441046">8 800 444 10 46</a>
