text-style file

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
             <!--start hero-->
             <section class="hero">
                 <nav class="menu menu--mobile">
+                  <div class="menu__container">
                     <ul class="menu__list">
                         <li><a href="#">Услуги</a></li>
                         <li><a href="#">о нас</a></li>
@@ -124,6 +125,7 @@
                             </a>
                         </div>
                     </div>
+                  </div>
                     
                 </nav>
                 <div class="hero__slider-inner">
@@ -894,7 +896,7 @@
                             Отправить
                         </button>
                         <div class="feedback__conditions">
-                            Нажимая кнопку Обратная связь, вы соглашаетесь с <a class="feedback__conditions-link" href="#">условиями обработки данных</a>
+                            Нажимая кнопку Обратная связь, вы соглашаетесь с <br> <a class="feedback__conditions-link" href="#">условиями обработки данных</a>
                         </div>
                         
                      </form>
